@@ -7,29 +7,9 @@ version := "0.0.1-SNAPSHOT"
 // standard compiler settings!
 scalacOptions in (Compile, doc) := Opts.doc.title("OPAL - Abstract Interpretation Framework")
 
-//scalacOptions in Compile ++= Seq("-Xdisable-assertions", "-Yinline", "-Yconst-opt", "-Ydead-code")
-
 libraryDependencies += "org.scala-lang.modules" %% "scala-xml" % "1.0.1"
 
 ////////////////////// "run" Configuration
 
 fork in run := true
-
-javaOptions in run := Seq(
-	"-Xmx2G", "-Xms1024m", "-Xnoclassgc",
-	"-XX:NewRatio=1", "-XX:SurvivorRatio=8", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", 
-	"-Dorg.opalj.threads.CPUBoundTasks=8", "-Dorg.opalj.threads.IOBoundTasks=24")
-
-
-
-////////////////////// (Unit) Tests
-
-parallelExecution in Test := true
-
-fork in Test := false
-
-
-////////////////////// Integration Tests
-
-logBuffered in IntegrationTest := false
 
